--- a/tablayoutex/src/main/res/layout/activity_main_viewpager.xml
+++ b/tablayoutex/src/main/res/layout/activity_main_viewpager.xml
@@ -11,8 +11,8 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <FrameLayout
-        android:id="@+id/tabContent"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
